lib_LTLIBRARIES = libmlapack_mpfr.la

libmlapack_mpfr_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -g -I$(top_srcdir)/include -I$(top_srcdir)/mpfrc++ -I$(top_srcdir)/$(GMP_INCLUDEDIR) -I$(top_srcdir)/$(MPFR_INCLUDEDIR) -I$(top_srcdir)/$(MPC_INCLUDEDIR)  -D___MPACK_BUILD_WITH_MPFR___
libmlapack_mpfr_la_SOURCES = ../../reference/Mutils.cpp \
../../reference/Rlae2.cpp  ../../reference/Rlamch.cpp ../../reference/Rlaev2.cpp ../../reference/Rlassq.cpp ../../reference/Rlanst.cpp \
../../reference/Rlansy.cpp ../../reference/Rlapy2.cpp ../../reference/Rlarfg.cpp ../../reference/Rlartg.cpp ../../reference/Rlaset.cpp \
../../reference/Rlasr.cpp  ../../reference/Rpotf2.cpp ../../reference/Rsteqr.cpp ../../reference/Rsterf.cpp ../../reference/Rlasrt.cpp \
../../reference/Rlascl.cpp ../../reference/Rsytd2.cpp ../../reference/Rsyev.cpp ../../reference/iMlaenv.cpp ../../reference/Rpotrf.cpp \
../../reference/Rlatrd.cpp ../../reference/Rsytrd.cpp ../../reference/Rlarft.cpp ../../reference/Rlarfb.cpp ../../reference/Rlarf.cpp  \
../../reference/Rorg2r.cpp ../../reference/Rorg2l.cpp ../../reference/Rorgqr.cpp ../../reference/Rorgql.cpp ../../reference/Rorgtr.cpp \
../../reference/Rptts2.cpp ../../reference/Rrscl.cpp  ../../reference/Rladiv.cpp ../../reference/Rlapy3.cpp ../../reference/Rlauu2.cpp \
../../reference/Rlartv.cpp ../../reference/Rlas2.cpp  ../../reference/Rlapll.cpp ../../reference/Rlacpy.cpp ../../reference/Rgelq2.cpp \
../../reference/Rlauum.cpp ../../reference/Rtrti2.cpp ../../reference/Rtrtri.cpp ../../reference/Rpotri.cpp ../../reference/Rlapmt.cpp \
../../reference/Rpttrf.cpp ../../reference/Risnan.cpp ../../reference/Rgeql2.cpp ../../reference/Rgeqr2.cpp ../../reference/Rorgl2.cpp \
../../reference/Rlaswp.cpp ../../reference/Rgerq2.cpp ../../reference/Rgetf2.cpp ../../reference/Rpoequ.cpp ../../reference/Rgetrf.cpp \
../../reference/Rgesv.cpp  ../../reference/Rtptri.cpp ../../reference/Rpptri.cpp ../../reference/Rgetrs.cpp ../../reference/Rlar2v.cpp \
../../reference/Rlamrg.cpp ../../reference/Rlasdt.cpp ../../reference/Rpttrs.cpp ../../reference/Rptsv.cpp  ../../reference/Rlaed5.cpp \
../../reference/Rlaqsp.cpp ../../reference/Rpptrs.cpp ../../reference/Rpotrs.cpp ../../reference/Rgesc2.cpp ../../reference/Rlarra.cpp \
../../reference/RCsum1.cpp ../../reference/Rlargv.cpp ../../reference/Rlaruv.cpp ../../reference/Rlarnv.cpp ../../reference/Rlaqr1.cpp \
../../reference/Rlarrc.cpp ../../reference/Rptcon.cpp ../../reference/Rposv.cpp  ../../reference/Rlarz.cpp  ../../reference/Rlatrz.cpp \
../../reference/Rlaqsy.cpp ../../reference/Rlange.cpp ../../reference/Rlaqge.cpp ../../reference/Rpptrf.cpp ../../reference/Rppsv.cpp  \
../../reference/Rlanhs.cpp ../../reference/Rtptrs.cpp ../../reference/Rpbtrs.cpp ../../reference/Ropgtr.cpp ../../reference/Rlacn2.cpp \
../../reference/Rsptrs.cpp ../../reference/Rspcon.cpp ../../reference/Rlangt.cpp ../../reference/Rlaqsb.cpp ../../reference/Rgetc2.cpp \
../../reference/Rgtts2.cpp ../../reference/Rgttrs.cpp ../../reference/Rstev.cpp  ../../reference/Rgttrf.cpp ../../reference/Rsytrs.cpp \
../../reference/Rsycon.cpp ../../reference/Rtrtrs.cpp ../../reference/Rppequ.cpp ../../reference/Rpbequ.cpp ../../reference/Rtbtrs.cpp \
../../reference/Rormr2.cpp ../../reference/Rlangb.cpp ../../reference/Rdisna.cpp ../../reference/Rgtcon.cpp ../../reference/Rorghr.cpp \
../../reference/Rlarrk.cpp ../../reference/Rorml2.cpp ../../reference/Rorm2l.cpp ../../reference/Rgebak.cpp ../../reference/Rgehd2.cpp \
../../reference/Rgbtf2.cpp ../../reference/Rgbtrf.cpp ../../reference/Rgbtrs.cpp ../../reference/Rsptrf.cpp ../../reference/Rgbsv.cpp  \
../../reference/Rpbtf2.cpp ../../reference/Rpbtrf.cpp ../../reference/Rpbsv.cpp  ../../reference/Rspsv.cpp  ../../reference/Rlatrs.cpp \
../../reference/Rgecon.cpp ../../reference/Rpocon.cpp ../../reference/Rlaqgb.cpp ../../reference/Rlatps.cpp ../../reference/Rppcon.cpp \
../../reference/Rlanv2.cpp ../../reference/Rormr3.cpp ../../reference/Rlantp.cpp ../../reference/Rtpcon.cpp ../../reference/Rlagtf.cpp \
../../reference/Rlansp.cpp ../../reference/Rlaqp2.cpp ../../reference/Rlatbs.cpp ../../reference/Rpbcon.cpp ../../reference/Rlasv2.cpp \
../../reference/Rggbak.cpp ../../reference/Rlantr.cpp ../../reference/Rtrcon.cpp ../../reference/Rlansb.cpp ../../reference/Rlagtm.cpp \
../../reference/Rlantb.cpp ../../reference/Rtbcon.cpp ../../reference/Ropmtr.cpp ../../reference/Rsptrd.cpp ../../reference/Rspev.cpp  \
../../reference/Rgelqf.cpp ../../reference/Rgeqrf.cpp ../../reference/Rgerqf.cpp ../../reference/Rlasyf.cpp ../../reference/Rsytf2.cpp \
../../reference/Rsytrf.cpp ../../reference/Rsysv.cpp  ../../reference/Rgeequ.cpp ../../reference/Rgetri.cpp ../../reference/Rsygs2.cpp \
../../reference/Rsygst.cpp ../../reference/Rsygv.cpp  ../../reference/Rgeqlf.cpp ../../reference/Rormqr.cpp ../../reference/Rormhr.cpp \
../../reference/Rspgst.cpp ../../reference/Rspgv.cpp  ../../reference/Rgbcon.cpp ../../reference/Rgtsv.cpp  ../../reference/Rorgr2.cpp \
../../reference/Rorgrq.cpp ../../reference/Rsbtrd.cpp ../../reference/Rsbev.cpp  ../../reference/Rlaed2.cpp ../../reference/Rlaed6.cpp \
../../reference/Rlaed4.cpp ../../reference/Rlaed3.cpp ../../reference/Rlaed1.cpp ../../reference/Rpbstf.cpp ../../reference/Rsbgst.cpp \
../../reference/Rsbgv.cpp  ../../reference/Rlaed9.cpp ../../reference/Rgbequ.cpp ../../reference/Rlaic1.cpp ../../reference/Rlasdq.cpp \
../../reference/Rlasd5.cpp ../../reference/Rlasd4.cpp ../../reference/Rlasd3.cpp ../../reference/Rlasd2.cpp ../../reference/Rlasd1.cpp \
../../reference/Rlasd0.cpp ../../reference/Rgeqpf.cpp ../../reference/Rlags2.cpp ../../reference/Rorglq.cpp ../../reference/Rorgbr.cpp \
../../reference/Rlarzb.cpp ../../reference/Rormql.cpp ../../reference/Rormtr.cpp ../../reference/Rlahrd.cpp ../../reference/Rlaeda.cpp \
../../reference/Rlasq6.cpp ../../reference/Rlasq4.cpp ../../reference/Rlasq5.cpp ../../reference/Rlasq3.cpp ../../reference/Rlarzt.cpp \
../../reference/Rtzrzf.cpp ../../reference/Clacgv.cpp ../../reference/Clacrm.cpp ../../reference/Rbdsqr.cpp ../../reference/Rlazq4.cpp \
../../reference/Rlazq3.cpp ../../reference/Rlasq2.cpp ../../reference/Rlasq1.cpp ../../reference/Rorm2r.cpp ../../reference/Rggrqf.cpp \
../../reference/Rormrq.cpp ../../reference/Clacrt.cpp ../../reference/Claesy.cpp ../../reference/Crot.cpp   ../../reference/Cspmv.cpp  \
../../reference/Cspr.cpp   ../../reference/Csymv.cpp  ../../reference/Csyr.cpp   ../../reference/iCmax1.cpp ../../reference/Cgbtf2.cpp \
../../reference/Rgebd2.cpp ../../reference/Clarf.cpp  ../../reference/Cladiv.cpp ../../reference/Clarfg.cpp ../../reference/Cgebd2.cpp \
../../reference/Cgehd2.cpp ../../reference/Cgelq2.cpp ../../reference/Cgeql2.cpp ../../reference/Cgerq2.cpp ../../reference/Claswp.cpp \
../../reference/Cgesc2.cpp ../../reference/Cgetc2.cpp ../../reference/Cgetf2.cpp ../../reference/Cgtts2.cpp ../../reference/Rlabrd.cpp \
../../reference/Clabrd.cpp ../../reference/Clacpy.cpp ../../reference/Rlaebz.cpp \
../../reference/Clahrd.cpp ../../reference/Rlarfx.cpp ../../reference/Rlaed8.cpp ../../reference/Rlasy2.cpp ../../reference/Rlaexc.cpp \
../../reference/Rlaed7.cpp ../../reference/Rlaed0.cpp ../../reference/Claed8.cpp ../../reference/Claed7.cpp ../../reference/Claed0.cpp \
../../reference/Clagtm.cpp ../../reference/Rlag2.cpp  ../../reference/Rlaein.cpp ../../reference/Clatrs.cpp ../../reference/Claein.cpp \
../../reference/Rlagts.cpp ../../reference/Rlagv2.cpp ../../reference/Rlahqr.cpp ../../reference/Clahqr.cpp ../../reference/Claic1.cpp \
../../reference/Rlalsa.cpp ../../reference/Classq.cpp ../../reference/Clangt.cpp ../../reference/Clapll.cpp ../../reference/Clange.cpp \
../../reference/Rlals0.cpp ../../reference/Clascl.cpp ../../reference/Clals0.cpp ../../reference/Clalsa.cpp ../../reference/Rlalsd.cpp \
../../reference/Clalsd.cpp ../../reference/Clangb.cpp ../../reference/Clanhs.cpp ../../reference/Clansb.cpp ../../reference/Clanhb.cpp \
../../reference/Claset.cpp ../../reference/Rlasd8.cpp ../../reference/Rlasd7.cpp ../../reference/Rlasd6.cpp ../../reference/Rlasda.cpp \
../../reference/Clansp.cpp ../../reference/Clanhp.cpp ../../reference/Clanht.cpp ../../reference/Clansy.cpp ../../reference/Clanhe.cpp \
../../reference/Clantb.cpp ../../reference/Clantp.cpp ../../reference/Clantr.cpp ../../reference/Clapmt.cpp ../../reference/Claqgb.cpp \
../../reference/Claqge.cpp ../../reference/Claqp2.cpp ../../reference/Rlaqps.cpp ../../reference/Claqps.cpp ../../reference/Claqsb.cpp \
../../reference/Claqsp.cpp ../../reference/Claqsy.cpp ../../reference/Clarfb.cpp ../../reference/Clarft.cpp ../../reference/Clasr.cpp  \
../../reference/Rlar1v.cpp ../../reference/Clar1v.cpp ../../reference/Clar2v.cpp ../../reference/Rlaln2.cpp ../../reference/Rlaqtr.cpp \
../../reference/Clarfx.cpp ../../reference/Cungr2.cpp ../../reference/Cunm2l.cpp ../../reference/Cunm2r.cpp ../../reference/Cunml2.cpp \
../../reference/Cunmr2.cpp ../../reference/Clarz.cpp  ../../reference/Cunmr3.cpp ../../reference/Cpbtf2.cpp ../../reference/Cpotf2.cpp \
../../reference/Cptts2.cpp ../../reference/CRrscl.cpp ../../reference/Chetd2.cpp ../../reference/Chegs2.cpp ../../reference/Csytf2.cpp \
../../reference/Chetf2.cpp ../../reference/Rlatdf.cpp ../../reference/Rtgsy2.cpp ../../reference/Rtgex2.cpp ../../reference/Clartg.cpp \
../../reference/Ctgex2.cpp ../../reference/Cgecon.cpp ../../reference/Clatdf.cpp ../../reference/Ctgsy2.cpp ../../reference/Ctrti2.cpp \
../../reference/Cungl2.cpp ../../reference/Cung2r.cpp ../../reference/Cung2l.cpp ../../reference/Clauu2.cpp ../../reference/Clauum.cpp \
../../reference/Clatrz.cpp ../../reference/Clasyf.cpp ../../reference/Clatrd.cpp ../../reference/Clahef.cpp ../../reference/Clatps.cpp \
../../reference/Clatbs.cpp ../../reference/Clarzt.cpp ../../reference/Clarzb.cpp ../../reference/Clartv.cpp ../../reference/Clargv.cpp \
../../reference/Clacn2.cpp ../../reference/Cgetrf.cpp ../../reference/Cgetrs.cpp ../../reference/Cgesv.cpp  ../../reference/Cungql.cpp \
../../reference/Cungqr.cpp ../../reference/Cungtr.cpp ../../reference/Csteqr.cpp ../../reference/Chetrd.cpp ../../reference/Cheev.cpp  \
../../reference/Cgeqr2.cpp ../../reference/Cunmqr.cpp ../../reference/Cgelqf.cpp ../../reference/Cgeqrf.cpp ../../reference/Ctrtrs.cpp \
../../reference/Cunmlq.cpp ../../reference/Cgels.cpp  ../../reference/Rsyevd.cpp ../../reference/Rgebal.cpp ../../reference/Rgehrd.cpp \
../../reference/Rtrexc.cpp ../../reference/Rlaqr5.cpp ../../reference/Rlaqr4.cpp ../../reference/Rlaqr3.cpp ../../reference/Rlaqr2.cpp \
../../reference/Rlaqr0.cpp ../../reference/Rhseqr.cpp ../../reference/Rtrsen.cpp ../../reference/Rgees.cpp  ../../reference/Rtrevc.cpp \
../../reference/Rgeev.cpp  ../../reference/Cgebak.cpp ../../reference/Rtrsyl.cpp ../../reference/Rstedc.cpp ../../reference/Rlahr2.cpp \
../../reference/Rormlq.cpp ../../reference/Rgels.cpp  ../../reference/Clacp2.cpp ../../reference/Ctrtri.cpp ../../reference/Cpotri.cpp \
../../reference/Claev2.cpp ../../reference/Cpttrs.cpp ../../reference/Cpttrf.cpp ../../reference/Cptsv.cpp  ../../reference/Clarcm.cpp \
../../reference/Cpoequ.cpp ../../reference/Cpptrs.cpp ../../reference/Cpotrs.cpp ../../reference/Ctptri.cpp ../../reference/Cpptri.cpp \
../../reference/Cpotrf.cpp ../../reference/Cposv.cpp  ../../reference/Cpptrf.cpp ../../reference/Cppsv.cpp  ../../reference/Claqhp.cpp \
../../reference/Cpbtrs.cpp ../../reference/Ctptrs.cpp ../../reference/Chptrf.cpp ../../reference/Chptrs.cpp ../../reference/Chpsv.cpp  \
../../reference/Claqhe.cpp ../../reference/Cpbtrf.cpp ../../reference/Cppequ.cpp ../../reference/Claqhb.cpp ../../reference/Rggqrf.cpp \
../../reference/Rsptri.cpp ../../reference/Rsytri.cpp ../../reference/Cpbequ.cpp ../../reference/Cupgtr.cpp ../../reference/Cgttrs.cpp \
../../reference/Ctbtrs.cpp ../../reference/Ctrexc.cpp ../../reference/Csptrf.cpp ../../reference/Csptrs.cpp ../../reference/Cspsv.cpp  \
../../reference/Cunghr.cpp ../../reference/Cpbsv.cpp  ../../reference/Clatzm.cpp ../../reference/Cgbtrf.cpp ../../reference/Cgbtrs.cpp \
../../reference/Cgbsv.cpp  ../../reference/Claqr1.cpp ../../reference/Cggbak.cpp ../../reference/Csytrf.cpp ../../reference/Csytrs.cpp \
../../reference/Csysv.cpp  ../../reference/Chetrf.cpp ../../reference/Chetrs.cpp ../../reference/Chesv.cpp  ../../reference/Ctzrqf.cpp \
../../reference/Chptrd.cpp ../../reference/Chpev.cpp  ../../reference/Cgeequ.cpp ../../reference/Cgetri.cpp ../../reference/Cunmhr.cpp \
../../reference/Cupmtr.cpp ../../reference/Cunglq.cpp ../../reference/Chpgst.cpp ../../reference/Chpgv.cpp  ../../reference/Cgeqlf.cpp \
../../reference/Cgttrf.cpp ../../reference/Cungrq.cpp ../../reference/Cgerqf.cpp ../../reference/Chbgst.cpp ../../reference/Chbev.cpp  \
../../reference/Cpbstf.cpp ../../reference/Chbgv.cpp  ../../reference/Cgbequ.cpp ../../reference/Cgtsv.cpp  ../../reference/Cunmql.cpp \
../../reference/Rgeqp3.cpp ../../reference/Cunmtr.cpp ../../reference/Cgbcon.cpp ../../reference/Cptcon.cpp ../../reference/Chpcon.cpp \
../../reference/Cspcon.cpp ../../reference/Checon.cpp ../../reference/Csycon.cpp ../../reference/Cgtcon.cpp ../../reference/Clarnv.cpp \
../../reference/Cpocon.cpp ../../reference/Cppcon.cpp ../../reference/Ctpcon.cpp ../../reference/Cpbcon.cpp ../../reference/Ctrcon.cpp \
../../reference/Ctbcon.cpp ../../reference/Ctgexc.cpp ../../reference/Cgeqpf.cpp ../../reference/Ctzrzf.cpp ../../reference/Chegst.cpp \
../../reference/Chegv.cpp  ../../reference/Cungbr.cpp ../../reference/Cunmrq.cpp ../../reference/Cggqrf.cpp ../../reference/Cggrqf.cpp \
../../reference/Cgebal.cpp ../../reference/Cgeqp3.cpp ../../reference/Clahr2.cpp ../../reference/Cgghrd.cpp ../../reference/Cptrfs.cpp \
../../reference/Cptsvx.cpp ../../reference/Cunmrz.cpp ../../reference/Cunmbr.cpp ../../reference/Cggglm.cpp ../../reference/Cgglse.cpp \
../../reference/Cgebrd.cpp ../../reference/Cgehrd.cpp ../../reference/Chpevd.cpp ../../reference/Rstebz.cpp ../../reference/Cstein.cpp \
../../reference/Chpevx.cpp ../../reference/Chpgvx.cpp ../../reference/Chpgvd.cpp ../../reference/Rormrz.cpp ../../reference/Rggglm.cpp \
../../reference/Rspevd.cpp ../../reference/Rgghrd.cpp ../../reference/Rptsvx.cpp ../../reference/Rptrfs.cpp ../../reference/Rormbr.cpp \
../../reference/Rspgvd.cpp ../../reference/Rgglse.cpp ../../reference/Rtzrqf.cpp ../../reference/Rlatzm.cpp ../../reference/Rgelsx.cpp \
../../reference/Rstevx.cpp ../../reference/Rpbrfs.cpp ../../reference/Rsyrfs.cpp ../../reference/Rspsvx.cpp ../../reference/Rstein.cpp \
../../reference/Rporfs.cpp ../../reference/Rsprfs.cpp ../../reference/Rgerfs.cpp ../../reference/Rpprfs.cpp ../../reference/Rspgvx.cpp \
../../reference/Rsygvd.cpp ../../reference/Rsbgvd.cpp ../../reference/Rgebrd.cpp ../../reference/Rsbevd.cpp ../../reference/Rtrrfs.cpp \
../../reference/Rtgsja.cpp ../../reference/Rtprfs.cpp ../../reference/Rgbrfs.cpp ../../reference/Rgtrfs.cpp ../../reference/Rgtsvx.cpp \
../../reference/Cstedc.cpp ../../reference/Chbtrd.cpp ../../reference/Rspevx.cpp ../../reference/Rsyevx.cpp ../../reference/Rsygvx.cpp \
../../reference/Rsysvx.cpp ../../reference/Rggsvp.cpp ../../reference/Rggsvd.cpp ../../reference/Rlarrr.cpp ../../reference/Csytri.cpp \
../../reference/Rppsvx.cpp ../../reference/Rsbgvx.cpp ../../reference/Rgelsy.cpp ../../reference/Rggbal.cpp ../../reference/Rgbbrd.cpp \
../../reference/Rhsein.cpp ../../reference/Rtbrfs.cpp ../../reference/Chprfs.cpp ../../reference/Chpsvx.cpp ../../reference/Chegvd.cpp \
../../reference/Chbgvd.cpp ../../reference/Cheevd.cpp ../../reference/Rgelsd.cpp ../../reference/Chbevd.cpp ../../reference/Csprfs.cpp \
../../reference/Cspsvx.cpp ../../reference/Rlarrj.cpp ../../reference/Rlarrd.cpp ../../reference/Rlaneg.cpp ../../reference/Rlarrb.cpp \
../../reference/Clarrv.cpp ../../reference/Rlarre.cpp ../../reference/Cstemr.cpp ../../reference/Cstegr.cpp ../../reference/Cpprfs.cpp \
../../reference/Cpteqr.cpp ../../reference/Chsein.cpp ../../reference/Cgerfs.cpp ../../reference/Chptri.cpp ../../reference/Cgtrfs.cpp \
../../reference/Cgtsvx.cpp ../../reference/Ctrsyl.cpp ../../reference/Ctrsen.cpp ../../reference/Csptri.cpp ../../reference/Cporfs.cpp \
../../reference/Cggsvp.cpp ../../reference/Clags2.cpp ../../reference/Ctgsja.cpp ../../reference/Chetri.cpp ../../reference/Cggsvd.cpp \
../../reference/Claqr2.cpp ../../reference/Claqr5.cpp ../../reference/Claqr4.cpp ../../reference/Claqr3.cpp ../../reference/Cgees.cpp  \
../../reference/Claqr0.cpp ../../reference/Chseqr.cpp ../../reference/Csyrfs.cpp ../../reference/Csysvx.cpp ../../reference/Cherfs.cpp \
../../reference/Chesvx.cpp ../../reference/Ctrsna.cpp ../../reference/Cgbrfs.cpp ../../reference/Cpbrfs.cpp ../../reference/Cgelsx.cpp \
../../reference/Cheevx.cpp ../../reference/Chegvx.cpp ../../reference/Ctprfs.cpp ../../reference/Ctrevc.cpp ../../reference/Ctrrfs.cpp \
../../reference/Chbgvx.cpp ../../reference/Cggbal.cpp ../../reference/Cgeesx.cpp ../../reference/Ctgsyl.cpp ../../reference/Ctgsna.cpp \
../../reference/Ctbrfs.cpp ../../reference/Cppsvx.cpp ../../reference/Chbevx.cpp ../../reference/Cposvx.cpp ../../reference/Rposvx.cpp \
../../reference/Cgelsy.cpp ../../reference/Cgeev.cpp  ../../reference/Rpbsvx.cpp ../../reference/Rbdsdc.cpp ../../reference/Rlarrf.cpp \
../../reference/Rlarrv.cpp ../../reference/Rstemr.cpp ../../reference/Rstevr.cpp ../../reference/Rggev.cpp  ../../reference/Rtrsna.cpp \
../../reference/Rgegs.cpp  ../../reference/Cbdsqr.cpp ../../reference/Rgesvx.cpp ../../reference/Rtgsyl.cpp ../../reference/Rtgexc.cpp \
../../reference/Rgeesx.cpp ../../reference/Rtgsen.cpp ../../reference/Rgges.cpp  ../../reference/Rtgsna.cpp ../../reference/Rsyevr.cpp \
../../reference/Rgbsvx.cpp ../../reference/Cgelsd.cpp ../../reference/Cgbbrd.cpp ../../reference/Cpbsvx.cpp ../../reference/Rsbevx.cpp \
../../reference/Rpteqr.cpp ../../reference/Rstegr.cpp ../../reference/Rstevd.cpp ../../reference/Rtgevc.cpp ../../reference/Rhgeqz.cpp \
../../reference/Ctgsen.cpp ../../reference/Chgeqz.cpp ../../reference/Cgges.cpp  ../../reference/Ctgevc.cpp ../../reference/Cggev.cpp  \
../../reference/Cgesvx.cpp ../../reference/Cgeevx.cpp ../../reference/Cheevr.cpp ../../reference/Rgeevx.cpp ../../reference/Cgbsvx.cpp \
../../reference/Cgegs.cpp  ../../reference/Cgegv.cpp  ../../reference/Rgegv.cpp  ../../reference/Rggesx.cpp ../../reference/Cggesx.cpp \
../../reference/Cgelss.cpp ../../reference/Cggevx.cpp ../../reference/Rgelss.cpp ../../reference/Rggevx.cpp ../../reference/Rgesdd.cpp \
../../reference/Cgesdd.cpp ../../reference/Rgesvd.cpp ../../reference/Cgesvd.cpp

if IS_MACOSX
libmlapack_mpfr_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
